src/test/deca/syntax/invalid/sansObjet/NoCbraceInMain.deca
{
    println("Start Test");
    int x = 2020;